--- a/coding_test/matching_score.ipynb
+++ b/coding_test/matching_score.ipynb
@@ -25,7 +25,8 @@
     "            \n",
     "    for index,page in enumerate(pages) :\n",
     "        page = page.lower()\n",
-    "        weight.append(page.count(word)) #해당 Html에 포함되어있는 word의 개수\n",
+    "        weight.append(page.count(word)) #해당 Html에 포함되어있는 word의 개수 #body로 한정해서 해야되나?\n",
+    "        \n",
     "        linkCount.append(page.count(\"href\")) #연결되어있는 링크의 개수\n",
     "#         print(\"here link\", linkCount)\n",
     "        for url in myUrl:\n",
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 870,
+   "execution_count": 31,
    "id": "ec1dd075",
    "metadata": {},
    "outputs": [],
@@ -163,12 +164,9 @@
     "        pageSub = re.sub('\\W|\\d',' ', page) # 특수문자 제거하고 해당 문자를 공백으로 대치함\n",
     "        pageList = pageSub.split()\n",
     "        basicScore.append(pageList.count(word))\n",
-    "#         print(pageList)\n",
     "        linkCount.append(page.count(\"href\"))\n",
     "        \n",
     "        for url in myUrl:\n",
-    "#             print(url)\n",
-    "#             print(\"\".join(page.split('<a href=\"')[1:]))\n",
     "            if re.findall(url, \"\".join(page.split('<a href=\"')[1:])):#참조링크 #list를 string으로 바꾸는 방법\n",
     "                referDict[index].append(myUrl.index(url))\n",
     "    \n",
@@ -183,18 +181,16 @@
     "    \n",
     "    #총점 계산하기\n",
     "    for key,value in referDict.items():\n",
-    "#         print(\"k\",key)\n",
-    "#         print(\"v\", value)\n",
     "        for i in range(len(linkScore)):\n",
     "            if i in value :\n",
     "                scores[i] += linkScore[key]\n",
     "        \n",
-    "#     print(referDict)\n",
+    "#     print(\"referDict\",referDict)\n",
     "#     print(myUrl)\n",
     "#     print(\"linkCount: \", linkCount)\n",
     "#     print(\"linkScore : \", linkScore)\n",
     "#     print(\"basicScore : \",basicScore)\n",
-    "#     print(scores)\n",
+    "    print(scores)\n",
     "#     print(scores. index(max(scores)))\n",
     "    \n",
     "    answer = scores. index(max(scores))\n",
@@ -204,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 871,
+   "execution_count": 32,
    "id": "e88282ae",
    "metadata": {},
    "outputs": [
@@ -216,6 +212,14 @@
       "thisIsL 1\n",
       "this is basicScore 1\n",
       "thisIsL 1\n",
+      "i am value []\n",
+      "i am linkScore [0.0, 1.0]\n",
+      "i am i 0\n",
+      "i am i 1\n",
+      "i am value []\n",
+      "i am linkScore [0.0, 1.0]\n",
+      "i am i 0\n",
+      "i am i 1\n",
       "[0, 1]\n"
      ]
     },
@@ -225,7 +229,7 @@
        "1"
       ]
      },
-     "execution_count": 871,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 872,
+   "execution_count": 61,
    "id": "240f7195",
    "metadata": {},
    "outputs": [
@@ -250,7 +254,7 @@
       "thisIsL 2\n",
       "this is basicScore 1\n",
       "thisIsL 1\n",
-      "[4.5, 4.0, 1.5]\n"
+      "[3, 1, 1]\n"
      ]
     },
     {
@@ -259,7 +263,159 @@
        "0"
       ]
      },
-     "execution_count": 872,
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(\"blind\",[\"<html lang=\\\"ko\\\" xml:lang=\\\"ko\\\" xmlns=\\\"http://www.w3.org/1999/xhtml\\\">\\n<head>\\n  <meta charset=\\\"utf-8\\\">\\n  <meta property=\\\"og:url\\\" content=\\\"https://a.com\\\"/>\\n</head>  \\n<body>\\nBlind Lorem Blind ipsum dolor Blind test sit amet, consectetur adipiscing elit. \\n<a href=\\\"https://b.com\\\"> Link to b </a>\\n</body>\\n</html>\", \"<html lang=\\\"ko\\\" xml:lang=\\\"ko\\\" xmlns=\\\"http://www.w3.org/1999/xhtml\\\">\\n<head>\\n  <meta charset=\\\"utf-8\\\">\\n  <meta property=\\\"og:url\\\" content=\\\"https://b.com\\\"/>\\n</head>  \\n<body>\\nSuspendisse potenti. Vivamus venenatis tellus non turpis bibendum, \\n<a href=\\\"https://a.com\\\"> Link to a </a>\\nblind sed congue urna varius. Suspendisse feugiat nisl ligula, quis malesuada felis hendrerit ut.\\n<a href=\\\"https://c.com\\\"> Link to c </a>\\n</body>\\n</html>\", \"<html lang=\\\"ko\\\" xml:lang=\\\"ko\\\" xmlns=\\\"http://www.w3.org/1999/xhtml\\\">\\n<head>\\n  <meta charset=\\\"utf-8\\\">\\n  <meta property=\\\"og:url\\\" content=\\\"https://c.com\\\"/>\\n</head>  \\n<body>\\nUt condimentum urna at felis sodales rutrum. Sed dapibus cursus diam, non interdum nulla tempor nec. Phasellus rutrum enim at orci consectetu blind\\n<a href=\\\"https://a.com\\\"> Link to a </a>\\n</body>\\n</html>\"] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "504b29ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import repeat\n",
+    "import re\n",
+    "\n",
+    "def solution(word, pages):\n",
+    "    myUrl = []\n",
+    "    basicScore = []\n",
+    "    linkCount = []\n",
+    "    linkScore = []\n",
+    "    scores = []\n",
+    "    referDict = {id : [] for id in range(len(pages))}\n",
+    "    answer = 0\n",
+    "    \n",
+    "    word = word.lower()\n",
+    "    \n",
+    "    #myUrl 찾기\n",
+    "    for page in pages :\n",
+    "        myUrl.append(page.split('<meta property=\"og:url\" content=\"')[1].split('\"/>')[0])\n",
+    "    \n",
+    "    #basicScore\n",
+    "    for index, page in enumerate(pages) :\n",
+    "        page = page.lower()\n",
+    "        bodyPage = \"\".join(page.split('<body>')[1:])\n",
+    "        pageSub = re.sub('\\W|\\d',' ', bodyPage) # 특수문자 제거하고 해당 문자를 공백으로 대치함\n",
+    "        pageList = pageSub.split()\n",
+    "        basicScore.append(pageList.count(word))\n",
+    "        linkCount.append(page.count(\"href\"))\n",
+    "        \n",
+    "        findURLList = page.split('<a href=\"')[1]\n",
+    "        findURL = findURLList.split('\">')[0]\n",
+    "        print(findURL)\n",
+    "        for url in myUrl:\n",
+    "            if findURL == url :\n",
+    "                referDict[index].append(myUrl.index(url))\n",
+    "                \n",
+    "#                 print(i)\n",
+    "                print(\"----\")\n",
+    "#                 print(i.split(\">\"))\n",
+    "                \n",
+    "#             if re.findall(url, \"\".join(page.split('<a href=\"')[1:])):#참조링크 #list를 string으로 바꾸는 방법\n",
+    "                referDict[index].append(myUrl.index(url))\n",
+    "    \n",
+    "    #link 점수 계산\n",
+    "    for index, l in enumerate(linkCount):\n",
+    "        print(\"this is basicScore\",basicScore[index])\n",
+    "#         print(\"thisIsIndex\", index)\n",
+    "        print(\"thisIsL\", l)\n",
+    "        linkScore.append(basicScore[index]/ l)\n",
+    "        \n",
+    "    scores = basicScore\n",
+    "    \n",
+    "    #총점 계산하기\n",
+    "    for key,value in referDict.items():\n",
+    "        for i in range(len(linkScore)):\n",
+    "            if i in value :\n",
+    "                scores[i] += linkScore[key]\n",
+    "        \n",
+    "#     print(\"referDict\",referDict)\n",
+    "    print(myUrl)\n",
+    "#     print(\"linkCount: \", linkCount)\n",
+    "#     print(\"linkScore : \", linkScore)\n",
+    "#     print(\"basicScore : \",basicScore)\n",
+    "    print(scores)\n",
+    "#     print(scores. index(max(scores)))\n",
+    "    \n",
+    "    answer = scores. index(max(scores))\n",
+    "\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "cfdb637d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://programmers.co.kr/learn/courses/4673\n",
+      "https://hashcode.co.kr/tos\n",
+      "this is basicScore 0\n",
+      "thisIsL 1\n",
+      "this is basicScore 1\n",
+      "thisIsL 1\n",
+      "['https://careers.kakao.com/interview/list', 'https://www.kakaocorp.com']\n",
+      "[0, 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(\"muzi\", [\"<html lang=\\\"ko\\\" xml:lang=\\\"ko\\\" xmlns=\\\"http://www.w3.org/1999/xhtml\\\">\\n<head>\\n  <meta charset=\\\"utf-8\\\">\\n  <meta property=\\\"og:url\\\" content=\\\"https://careers.kakao.com/interview/list\\\"/>\\n</head>  \\n<body>\\n<a href=\\\"https://programmers.co.kr/learn/courses/4673\\\"></a>#!MuziMuzi!)jayg07con&&\\n\\n</body>\\n</html>\", \"<html lang=\\\"ko\\\" xml:lang=\\\"ko\\\" xmlns=\\\"http://www.w3.org/1999/xhtml\\\">\\n<head>\\n  <meta charset=\\\"utf-8\\\">\\n  <meta property=\\\"og:url\\\" content=\\\"https://www.kakaocorp.com\\\"/>\\n</head>  \\n<body>\\ncon%\\tmuzI92apeach&2<a href=\\\"https://hashcode.co.kr/tos\\\"></a>\\n\\n\\t^\\n</body>\\n</html>\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "f1f78ddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://b.com\n",
+      "----\n",
+      "https://a.com\n",
+      "----\n",
+      "https://a.com\n",
+      "----\n",
+      "this is basicScore 3\n",
+      "thisIsL 1\n",
+      "this is basicScore 1\n",
+      "thisIsL 2\n",
+      "this is basicScore 1\n",
+      "thisIsL 1\n",
+      "['https://a.com', 'https://b.com', 'https://c.com']\n",
+      "[4.5, 4.0, 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +427,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "504b29ba",
+   "id": "0720aadd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26ef94f8",
    "metadata": {},
    "outputs": [],
    "source": []
