--- a/coding_test/move 110.ipynb
+++ b/coding_test/move 110.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 496,
    "id": "8658678a",
    "metadata": {},
    "outputs": [],
@@ -73,53 +73,24 @@
     "            count111 = 0\n",
     "            count110 = 0\n",
     "            for i in range(0,len(number)-2):\n",
-    "#                 print(\"heyheyhey\")\n",
-    "#                 print(number)\n",
-    "#                 print(i)\n",
-    "#                 print(number[i] + number[i+1] + number[i+2])\n",
     "                if number[i] + number[i+1] + number[i+2] == \"111\":\n",
     "                    count111 +=1\n",
-    "                    firstIDX = i\n",
-    "                    secondIDX = i+1\n",
-    "                    thirdIDX = i+2\n",
     "                    count111List.append(i)\n",
-    "#                     print(\"count111List\",count111List)\n",
-    "                    \n",
-    "                    \n",
-    "#                 print(count111)\n",
-    "#                 print(number[i] + number[i+1] + number[i+2])\n",
+    "\n",
     "                if count111 > 0 and number[i] + number[i+1] + number[i+2] == \"110\": \n",
-    "#                     print(\"-------------------\")\n",
-    "#                     print(\"start Exchange\")\n",
-    "#                     print(\"number is \", number)\n",
     "                    count110 +=1\n",
-    "#                     number[i], number[i+1], number[i+2] = \"1\",\"1\",\"1\"\n",
-    "#                     print(\"in number\",number)\n",
     "                    number.pop(i)\n",
-    "#                     print(number)\n",
     "                    number.pop(i)\n",
-    "#                     print(number)\n",
     "                    number.pop(i)\n",
     "\n",
-    "#                     print(\"***************situation!!**************\")\n",
-    "#                     print(\"count111List[0]\",count111List[0])\n",
     "                    number.insert(count111List[0]-1,\"1\")\n",
     "                    number.insert(count111List[0]-1,\"1\")\n",
     "                    number.insert(count111List[0]-1,\"0\")\n",
-    "#                     print(\"out number\", number)\n",
-    "#                     print(\"---------finish--------\")\n",
     "                    \n",
     "                    count111 =0\n",
     "                    count111List.clear()\n",
     "                    break\n",
     "                    \n",
-    "#                     print(number)\n",
-    "#                     print(\"----\")\n",
-    "#                     number.pop(firstIDX)\n",
-    "                    \n",
-    "#                     number.push(thirdIDX+1)\n",
-    "#                     number[thirdIDX+1], number[thirdIDX+2], number[thirdIDX+3] = \"1\",\"1\",\"1\"\n",
-    "#                     count111 = 0\n",
     "        resultNum = \"\".join(number)\n",
     "        answer.append(resultNum)\n",
     "    return answer"
@@ -127,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 497,
    "id": "153b09ff",
    "metadata": {},
    "outputs": [
@@ -137,7 +108,7 @@
        "['1101', '100110110', '0110110111']"
       ]
      },
-     "execution_count": 495,
+     "execution_count": 497,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,12 +288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 498,
    "id": "982a0f20",
    "metadata": {},
    "outputs": [],
    "source": [
     "def solution(s):\n",
+    "    #deque 으로 바꿔서 풀어보기\n",
     "    answer = []\n",
     "    idxList111 = []\n",
     "    for number in s :\n",
@@ -345,9 +317,11 @@
     "                        number.pop(i)\n",
     "                        number.pop(i)\n",
     "\n",
-    "                        number.insert(idxList111[0]-1,\"1\")\n",
-    "                        number.insert(idxList111[0]-1,\"1\")\n",
-    "                        number.insert(idxList111[0]-1,\"0\")\n",
+    "                        number.insert(idxList111[0]-1,\"110\")\n",
+    "#                         number.insert(idxList111[0]-1,\"1\")\n",
+    "#                         number.insert(idxList111[0]-1,\"0\")\n",
+    "                        #insert가 시간복잡도 큼.\n",
+    "                        #appendLeft\n",
     "\n",
     "                        count111 =0\n",
     "                        idxList111.clear()\n",
@@ -361,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 499,
    "id": "3ed0614c",
    "metadata": {},
    "outputs": [
@@ -379,8 +353,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-491-6f734eb9ef48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"1110\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"100111100\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"0111111010\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# [\"1101\",\"100110110\",\"0110110111\"]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-490-0be6fe83abcc>\u001b[0m in \u001b[0;36msolution\u001b[0;34m(s)\u001b[0m\n\u001b[1;32m     22\u001b[0m                         \u001b[0mnumber\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m                         \u001b[0mnumber\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midxList111\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m                         \u001b[0mnumber\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midxList111\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m                         \u001b[0mnumber\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midxList111\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"0\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-499-6f734eb9ef48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"1110\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"100111100\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"0111111010\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# [\"1101\",\"100110110\",\"0110110111\"]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-498-eec9e4c3993e>\u001b[0m in \u001b[0;36msolution\u001b[0;34m(s)\u001b[0m\n\u001b[1;32m     17\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mcount111\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m                     \u001b[0;32mif\u001b[0m \u001b[0mnumber\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnumber\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnumber\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"110\"\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m                         \u001b[0mcount110\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m                         \u001b[0mnumber\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -421,7 +395,7 @@
     "            else:\n",
     "                array.append(j)\n",
     "        print(array)\n",
-    "        if len(array) == 0: #이 부분 이해x\n",
+    "        if len(array) == 0: #110 으로만 이루어진 경우\n",
     "            answer.append('110' * cnt)\n",
     "        else:\n",
     "            for j in range(len(array)-1, -1, -1):\n",
