--- a/coding_test/findParent.ipynb
+++ b/coding_test/findParent.ipynb
@@ -6,7 +6,30 @@
    "id": "7fba83e8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "sys.setrecursionlimit(10**6)\n",
+    "\n",
+    "n = int(input())\n",
+    "graph = [[] for _ in range(n+1)]\n",
+    "visited = [False for _ in range(n+1)]\n",
+    "parents = [0 for _ in range(n+1)]\n",
+    "\n",
+    "for i in range(n-1):\n",
+    "    x,y = map(int, input().split())\n",
+    "    graph[x].append(y)\n",
+    "    graph[y].append(x)\n",
+    "\n",
+    "def dfs(cur):\n",
+    "    visited[cur] = True\n",
+    "    for next in graph[cur]:\n",
+    "        if visited[next] == False:\n",
+    "            parents[next] = cur\n",
+    "            dfs(next)\n",
+    "dfs(1)\n",
+    "for i in range(2, n+1):\n",
+    "    print(parents[i])"
+   ]
   }
  ],
  "metadata": {
