--- a/coding_test/tree_circuit.ipynb
+++ b/coding_test/tree_circuit.ipynb
@@ -35,7 +35,6 @@
     "        preorder(tree[node.left])\n",
     "    if node.right != '.': #오른쪽이 공백이 아니라면\n",
     "        preorder(tree[node.right])\n",
-    "    #어떻게 다시 루트로드로 돌아와서 오른쪽 트리 탐색하지?\n",
     "    \n",
     "def inorder(node):  #중위순회 : 왼 - 루트 - 오\n",
     "    if node.left != '.': #왼쪽이 공백이 아니라면\n",
@@ -44,7 +43,7 @@
     "    if node.right != '.': #오른쪽이 공백이 아니라면\n",
     "        inorder(tree[node.right])\n",
     "    \n",
-    "def postorder(node):  #중위순회 : 왼 - 오 - 루트\n",
+    "def postorder(node):  #후위순회 : 왼 - 오 - 루트\n",
     "    if node.left != '.': #왼쪽이 공백이 아니라면\n",
     "        postorder(tree[node.left])\n",
     "    if node.right != '.': #오른쪽이 공백이 아니라면\n",
