--- a/coding_test/Greedy_training.ipynb
+++ b/coding_test/Greedy_training.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 226,
-   "id": "0eb362b3",
+   "execution_count": 368,
+   "id": "e50d2df6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,32 +30,33 @@
     "                lost.remove(l)\n",
     "#                 print()\n",
     "                \n",
-    "            \n",
-    "                \n",
     "    answer = n - len(lost)\n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
-   "id": "3470256b",
+   "execution_count": 369,
+   "id": "e61fce3f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "3\n",
+      "lost [2, 4]\n",
+      "2 l1\n",
+      "3 r1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5"
+       "4"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "121db96a",
+   "id": "6848713c",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33864d44",
+   "id": "cdc0ecc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "fcbcc22e",
+   "id": "2f032a7e",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "8dd291ac",
+   "id": "a63c67a7",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "f1bdbb6a",
+   "id": "a3984d22",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "55273033",
+   "id": "670b0399",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e04b39f",
+   "id": "6b72eb44",
    "metadata": {},
    "source": [
     "# 다시!"
@@ -232,44 +233,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
-   "id": "fd4e034f",
+   "execution_count": 377,
+   "id": "7955b611",
    "metadata": {},
    "outputs": [],
    "source": [
     "def solution(n, lost, reserve):\n",
     "    answer = 0\n",
-    "    count = len(lost)\n",
-    "    for r in reserve: #[3,5]\n",
-    "        for l in lost :# [2,4]\n",
+    "    absent = len(lost) \n",
+    "    reserve = set(reserve)\n",
+    "    lost = set(lost)\n",
+    "    \n",
+    "    inter = reserve.intersection(lost)\n",
+    "    reserve = reserve.difference(inter)\n",
+    "    lost = lost.difference(inter)\n",
+    "    \n",
+    "    print(lost)\n",
+    "    print(reserve)\n",
+    "    \n",
+    "    \n",
+    "    for r in reserve: \n",
+    "        for l in lost :\n",
+    "\n",
     "            if  r-1 == l: \n",
-    "                count -=1 \n",
+    "                absent -=1 \n",
     "                break\n",
     "                \n",
     "            elif l == r+1:\n",
-    "                count -= 1\n",
+    "                absent -= 1\n",
     "                break\n",
     "    \n",
-    "    if count < 0 :\n",
-    "        count = 0\n",
-    "    answer = n - count\n",
+    "    if absent < 0 : absent = 0\n",
+    "    answer = n - absent\n",
     "    \n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
-   "id": "5f7f6d45",
+   "execution_count": 378,
+   "id": "4b6a32f6",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4}\n",
+      "{1, 3, 5}\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "5"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,8 +300,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 376,
+   "id": "64db24b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1}\n",
+      "{3}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 376,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(3,[3],[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "id": "8495c3e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 373,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(3,[1,2],[2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "id": "d808046d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 6, 8]\n",
+      "[2, 5, 6]\n",
+      "[5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lost = [1,2,5,6,8]\n",
+    "reserve = [1,2,3,4,8,9]\n",
+    "\n",
+    "for r in reserve: #[3,5]\n",
+    "    print(lost)\n",
+    "    for l in lost :# [2,4]\n",
+    "        if l in reserve:\n",
+    "            lost.remove(l)\n",
+    "            reserve.remove(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "id": "b0efd16e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{5, 6}\n",
+      "{9, 3, 4}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 367,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lost = [1,2,5,6,8]\n",
+    "reserve = [1,2,3,4,8,9]\n",
+    "\n",
+    "solution(9,lost,reserve)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "71b84ed4",
+   "id": "e9aadd93",
    "metadata": {},
    "outputs": [],
    "source": []
